<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/personal_title"
        android:textSize="30sp"
        android:textColor="#FFFFFF"
        android:background="#F10D0D"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:paddingLeft="5dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:background="#000000"
        android:paddingLeft="10dp"
        android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.25"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:text="@string/name"/>
            <EditText
                android:layout_width="0dp"
                android:layout_weight="0.75"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:inputType="textPersonName"
                android:id="@+id/personal_name"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:background="#000000"
        android:paddingLeft="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.25"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:text="@string/age"/>
        <EditText
            android:layout_width="0dp"
            android:layout_weight="0.75"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textColor="#FFFFFF"
            android:id="@+id/personal_age"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:background="#000000"
        android:paddingLeft="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.25"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:text="@string/height"/>
        <EditText
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:textColor="#FFFFFF"
            android:id="@+id/personal_height"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.25"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:id="@+id/personal_hunit"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:background="#000000"
        android:paddingLeft="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.25"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:text="@string/weight"/>
        <EditText
            android:layout_width="0dp"
            android:layout_weight="0.75"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:inputType="numberDecimal"
            android:id="@+id/personal_weight"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.25"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:id="@+id/personal_wunit"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:background="#000000"
        android:paddingLeft="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.25"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:text="@string/gender"/>
        <Spinner
            android:layout_width="0dp"
            android:layout_weight="0.75"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:entries="@array/gender_list"
            android:textColor="#FFFFFF"
            android:background="@drawable/shape_spinner"
            android:id="@+id/personal_gender"/>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_personal_info"
        android:textColor="#FFFFFF"
        android:background="@drawable/shape"
        android:layout_margin="20dp"
        android:id="@+id/personal_save_button"/>
</LinearLayout>